--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<html><body><h1>App Starter</h1></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Kraken Invest - Mock Exchange Download</title>
+  <style>
+    body { font-family: system-ui, -apple-system, Roboto, 'Segoe UI', Arial; max-width: 900px; margin: 40px auto; padding: 0 16px; }
+    .hero { display:flex; align-items:center; gap:20px; }
+    .btn { display:inline-block; background:#0366d6; color:white; padding:12px 20px; border-radius:8px; text-decoration:none; }
+    pre.instructions { background:#f6f8fa; padding:12px; border-radius:6px; }
+  </style>
+</head>
+<body>
+  <h1>Kraken Invest — Mock Crypto Exchange</h1>
+  <p>Welcome — click the button below to download the desktop bundle and follow the guided install steps.</p>
+  <p><a class="btn" href="https://lw5388979-wq.github.io/kraken-invest-trade-learn/release/mock_exchange_bundle_full_release.zip" download>Download Desktop Bundle (ZIP)</a></p>
+  <h2>Step-by-step install</h2>
+  <ol>
+    <li>Download the ZIP using the button above.</li>
+    <li>Unzip the folder (Windows: right-click → Extract All; macOS: double-click).</li>
+    <li>Open the <code>electron/dist/</code> folder and run the installer (.exe) or run the executable directly.</li>
+    <li>Start the Flask server (if using the web version) by running <code>./run.sh</code> or <code>python app.py</code>.</li>
+  </ol>
+  <h3>Troubleshooting</h3>
+  <p>If Windows blocks the installer, right-click → Open and accept "More info" → Run anyway (this is standard for unsigned apps).</p>
+  <h3>Files included</h3>
+  <ul>
+    <li>mock_exchange full project ZIP (desktop + web)</li>
+    <li>build scripts: <code>build-windows.sh</code>, <code>auto_upload.sh</code></li>
+    <li>README and install instructions PDF</li>
+  </ul>
+  <h3>GitHub Pages URL</h3>
+  <p>Your repo's Pages URL will be:</p>
+  <pre class="instructions">https://lw5388979-wq.github.io/kraken-invest-trade-learn/</pre>
+  <p>Once you push the repo to GitHub, enable GitHub Pages (Settings → Pages → select main branch), and this page will be live.</p>
+</body>
+</html>
